# FOC_CTRL

./: CMakeLists.txt  Main.qml  command_control_manager.cpp  command_control_manager.h  foc_chart_manager.cpp  foc_chart_manager.h  main.cpp  motor_mode_control_manager.cpp  motor_mode_control_manager.h  ringbuf.c  ringbuf.h  serial_communication_manager.cpp  serial_communication_manager.h
DOC/: FOC控制上位机需求文档.md  motor_protocol.h
qml/: CommandControlModule.qml  FOCChartModule.qml  LogModule.qml  MotorDataReadWriteModule.qml  MotorModeControlModule.qml  SerialCommunicationModule.qml
